...
        boolean("bypassLan","绕过局域网"),
        boolean("bypassLanInCore","在内核中绕过局域网"),
        boolean("concurrentDial","并发拨号"),
        boolean("sniff","流量嗅探"),
        boolean("resolveDestination","解析目标地址"),
        choice("ipv6Mode","IPv6 路由",SettingDefaults.value("ipv6Mode"),*ipv6Modes.toTypedArray()),
        choice("rulesProvider","路由资源更新源",SettingDefaults.value("rulesProvider"),*rulesProviders.toTypedArray()),
        Preference("rulesGeositeUrl","GeoSite URL",SettingDefaults.value("rulesGeositeUrl")),
        Preference("rulesGeoipUrl","GeoIP URL",SettingDefaults.value("rulesGeoipUrl")),
        choice("rulesUpdateInterval","规则集更新间隔",SettingDefaults.value("rulesUpdateInterval"),"off" to "关闭","6h" to "6 小时","12h" to "12 小时","24h" to "24 小时","3d" to "3 天","7d" to "7 天"),
        choice("urlTestInterval","URLTest 间隔",SettingDefaults.value("urlTestInterval"),*urlTestIntervals.toTypedArray()),
        choice("urlTestTolerance","URLTest 切换容差",SettingDefaults.value("urlTestTolerance"),*urlTestTolerances.toTypedArray()),
    ),
...
